[package]
name = "bellman-test"
version = "0.1.0"
authors = ["G1gg1L3s <mr.a678i@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.9.0"
bls12_381 = "0.4.0"
ff = "0.9.0"
pairing = "*"
rand = "0.8"
log = "0.4"
simple-logging = "2.0.2"
